[package]
name = "ofiles"
version = "0.1.0"
authors = ["Joshua Abraham <sinisterpatrician@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = { version = "^0.12.1", default-features = false }
glob = "0.3.0"
nix = "0.17.0"

[dev-dependencies]
rusty-fork = "0.2.2"
tempfile = "3.1.0"
