[package]
name = "ofiles"
version = "0.1.0"
authors = ["Joshua Abraham <sinisterpatrician@gmail.com>"]
edition = "2018"
description = "Identify processes that have opened files or sockets"
keywords = ["filesystem", "sockets", "processes", "lsof", "fuser"]
homepage = "https://github.com/jabedude/ofiles/"
documentation = "https://docs.rs/ofiles"
repository = "https://github.com/jabedude/ofiles/"
readme = "README.md"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = { version = "^0.12.1", default-features = false }
glob = "0.3.0"
log = "0.4.8"
nix = "0.17.0"

[dev-dependencies]
env_logger = "0.7.1"
rusty-fork = "0.2.2"
tempfile = "3.1.0"
